test_suite/tests/ui/float/derive/eq_without_finite.stderr
error: To derive Eq trait on float-based type there must be validation that proves that inner value is not NaN.
       Consider adding:
           validate(finite)
 --> tests/ui/float/derive/eq_without_finite.rs:3:28
  |
3 | #[nutype(derive(PartialEq, Eq))]
  |                            ^^
